--- a/SKUApp/Views/Home/Index.cshtml
+++ b/SKUApp/Views/Home/Index.cshtml
@@ -9,11 +9,18 @@
 <html>
     <head>
         <title>title</title>
+        <link rel="stylesheet" href="~/Content/bootstrap/css/bootstrap.min.css"/>
+        <script src="~/Content/jquery-1.9.1.min.js"></script>
+        <script src="~/Content/bootstrap/js/bootstrap.js"></script>
     </head>
-
+        
     <body>
-        <div>
-              This is the body
-        </div>
+        @using (Html.BeginForm("Find", "Style"))
+        {
+            <input id="search" name="stylecode" class="text-left"/>
+            <input id="submit" value="Find" type="submit" class="btn btn-primary"/>
+        }
+
     </body>
 </html>
+
