--- a/SKUApp/Views/Style/Find.cshtml
+++ b/SKUApp/Views/Style/Find.cshtml
@@ -1,4 +1,4 @@
-﻿@model dynamic
+﻿@model IEnumerable<Models.Domain.SKU>
 
 @{
     Layout = null;
@@ -9,21 +9,31 @@
 <html>
     <head>
         <title>title</title>
+        <link rel="stylesheet" href="~/Content/bootstrap/css/bootstrap.min.css"/>
+        <script src="~/Content/jquery-1.9.1.min.js"> </script>
+        <script src="~/Content/bootstrap/js/bootstrap.js"> </script>
     </head>
     <body>
-        <ul id="results">
-        
-            @{
-                foreach (var result in Model)
-                {
-                    <li class="result">
-                        <span class="itemcolour">@result.Colour</span>
-                        <span class="itemsize">@result.Size</span>
-                        <span class="itemcode">@result.StyleCode</span>
-                    </li>
-                }
-            }
-             
-        </ul>
+        <table id="results" class="table ">
+            <thead>
+                <tr>
+                    <th>Style Code</th>
+                    <th>Colour</th>
+                    <th>Size</th>
+                </tr>
+            </thead>
+            <tbody>
+                @{
+                    foreach (var result in Model)
+                    {
+                        <tr class="result">
+                            <td class="itemcode">@result.Style.Code</td>
+                            <td class="itemcolour">@result.Colour</td>
+                            <td class="itemsize">@result.Size</td>
+                        </tr>
+                    }
+                }            
+            </tbody>
+        </table>
     </body>
 </html>
