--- a/StockInquiry/Views/Style/Find.cshtml
+++ b/StockInquiry/Views/Style/Find.cshtml
@@ -1,40 +1,29 @@
 ﻿@model IEnumerable<StockInquiry.Models.Domain.SKU>
 
 @{
-    Layout = null;
+    ViewBag.Title = "Stock";
+    Layout = "~/Views/Site/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
-
-<html>
-    <head>
-        <title>title</title>
-        <link rel="stylesheet" href="~/Content/bootstrap/css/bootstrap.min.css"/>
-        <script src="~/Content/jquery-1.9.1.min.js"> </script>
-        <script src="~/Content/bootstrap/js/bootstrap.js"> </script>
-    </head>
-    <body>
-        <table id="results" class="table ">
-            <thead>
-                <tr>
-                    <th>Style Code</th>
-                    <th>Colour</th>
-                    <th>Size</th>
+<table id="results" class="table ">
+    <thead>
+        <tr>
+            <th>Style Code</th>
+            <th>Colour</th>
+            <th>Size</th>
+        </tr>
+    </thead>
+    <tbody>
+        @{
+            foreach (var result in Model)
+            {
+                <tr class="result">
+                    <td class="itemcode">@result.Style.Code</td>
+                    <td class="itemcolour">@result.Colour</td>
+                    <td class="itemsize">@result.Size</td>
+                    <td><a href="@Url.Action("Find", "Stock", new { id = result.Id })">View Stock</a></td>
                 </tr>
-            </thead>
-            <tbody>
-                @{
-                    foreach (var result in Model)
-                    {
-                        <tr class="result">
-                            <td class="itemcode">@result.Style.Code</td>
-                            <td class="itemcolour">@result.Colour</td>
-                            <td class="itemsize">@result.Size</td>
-                            <td><a href="@Url.Action("Find", "Stock")">View Stock</a></td>
-                        </tr>
-                    }
-                }            
-            </tbody>
-        </table>
-    </body>
-</html>
+            }
+        }
+    </tbody>
+</table>
